:sparkles: feat(architecture): Implement front-end integration with the new API multi-tenant architecture.

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
+# URL da API para desenvolvimento local
+NEXT_LOCAL_API_URL=http://localhost:3000
+
+# URL da API para produção
 NEXT_PUBLIC_API_URL=
