--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "eslint"
+    "lint": "eslint",
+    "deploy": "export $(grep -v '^#' .env.local | xargs) && scp ../deploy_elo_front.sh $DEPLOY_USER@$DEPLOY_SERVER:~/ && ssh $DEPLOY_USER@$DEPLOY_SERVER 'chmod +x ~/deploy_elo_front.sh && ~/deploy_elo_front.sh'"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
